<resources>
    <string name="app_name">bSocial</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="backend_hostname"/>
    <string name="login">LOGIN</string>
    <string name="validation_empty_password">The password must not be empty</string>
    <string name="validation_empty_username">The username must not be empty</string>
    <string name="validation_password_mismatch">Password mismatch</string>
    <string name="register">REGISTER</string>
    <string name="password_retry_hint">Re-enter password</string>
    <string name="register_title">Register</string>
    <string name="register_or_login">Are you new to bSocial or do you already have an account?</string>
    <string name="unknown_error">Unknown error</string>

    <string name="edit_avatar_take_photo">Take Photo</string>
    <string name="edit_avatar_select">Upload Picture</string>
    <string name="edit_avatar_remove">Remove Picture</string>
    <string name="edit_avatar_dialog_title">Edit Profile Picture</string>
    <string name="edit_avatar_uploading">Uploading…</string>
    <string name="edit_avatar_remove_error">Error removing Profile Picture</string>
    <string name="edit_avatar_removed">Profile Picture removed</string>
    <string name="edit_avatar_canceled">Canceled editing Profile Picture</string>
    <string name="edit_avatar_camera_permission_error">Camera permission is required to take a picture. You can grant it in the Settings.</string>
    <string name="edit_avatar_uploaded">Profile Picture updated!</string>
    <string name="edit_avatar_upload_error">Error updating Profile Picture. Please try again later.</string>
    <string name="edit_avatar_edit">Edit</string>
    <string name="edit_avatar_loading">Loading…</string>
    <string name="edit_avatar_pending_approval">Profile Picture pending approval</string>
    <string name="profile_email">Email address</string>
    <string name="no_email">No email yet!</string>
    <string name="profile_status">Status</string>
    <string name="profile_no_status_yet">You don\'t have a status yet. Tap to set one!</string>
    <string name="profile_nickname_empty">Tap to set one!</string>
    <string name="profile_nickname">Nickname</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_nickname">Enter your Nickname</string>
    <string name="nickname_updated_successfuly">Nickname updated</string>
    <string name="nickname_updated_failed">Nickname coudn\'t be updated. Try again!</string>
    <string name="hint_type_a_message">Type a message</string>
    <string name="logout">Log out</string>
    <string name="via_gif">via @gif</string>
    <string name="search_friend_hint">Friend\'s email</string>
    <string name="search_friend_message">Add your friends!</string>
    <string name="friend_added_successfuly">Friend added successfuly!</string>
    <string name="friend_not_added">Friend not found! Check email again!</string>
    <string name="add">Add</string>
    <string name="conversation_select_attachment">Select file type</string>
    <string name="download_failed">Download failed!</string>

</resources>
