<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#ffffff"
              android:orientation="vertical"
              android:paddingBottom="8dp"
              app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/title"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/edit_avatar_dialog_title"
        android:textColor="@color/secondary"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/edit_avatar_take_photo"
        style="@style/AppTheme.BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_camera_24dp"
        android:text="@string/edit_avatar_take_photo" />

    <TextView
        android:id="@+id/edit_avatar_select"
        style="@style/AppTheme.BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_collections_24dp"
        android:text="@string/edit_avatar_select" />

    <TextView
        android:id="@+id/edit_avatar_remove"
        style="@style/AppTheme.BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_delete_24"
        android:text="@string/edit_avatar_remove" />

</LinearLayout>