<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.clpstudio.bsocial.presentation.profile.ProfilePageActivity">

    <include layout="@layout/action_bar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@drawable/bg_avatar"
            android:src="@drawable/default_avatar"/>

        <TextView
            android:id="@+id/avatar_edit"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@drawable/bg_avatar_edit"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="12dp"
            android:text="@string/edit_avatar_edit"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nickname_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_corners"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_nickname"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/profile_nickname_empty"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_corners"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_status"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/profile_no_status_yet"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_rounded_corners"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="clapalucian10@gmail.com"/>
    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_rounded_corners"
        android:paddingBottom="20dp"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:paddingRight="16dp"
        android:paddingTop="20dp"
        android:text="@string/logout"
        android:textColor="@color/black"/>

</LinearLayout>
